Fixed spacing of project descriptions

--- a/css/my.css
+++ b/css/my.css
@@ -63,6 +63,7 @@ body, html {
 
 .project p{
 	font-size: 24px;
+	padding-top: 15px;
 }
 
 hr{
